--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
