added exclude reasons to removed

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
